fixing spacing in collapsable menu

--- a/assets/css/accessibility.css
+++ b/assets/css/accessibility.css
@@ -87,3 +87,7 @@ body {
   line-height: 1.3;
   cursor: pointer;
 }
+
+.software-section {
+  margin-bottom: 2rem;
+}
